--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ header .profilebar{
 }
 header .profilebar img{
     width: 100%;
-    height: 200px;
+    height: 180px;
     border-radius: 50%;
     margin-top: 10px;
     border:2px solid white;
@@ -88,38 +88,30 @@ header ul li:hover{
 header .i{
     padding:0 10px;
 }
-@media screen and (max-width:427px){
-  header{
-    width: 100%;
-    height: 150px;
-    float: left;
-    transition: 1s;
-  }
-  header .profilebar{
-    width: 20%;
-    margin: 10px;
-    /* padding: 0 5px; */
-    box-sizing: border-box;
-    float: left;
-  }
-  header .profilebar img{
-      width: 100%;
-      height: 100px;
-  }
-  header .social{
-    width: 80%;
+header button{
+    width: 50px;
+    height: 50px;
+    /* display: none; */
+    float: right;
     text-align: center;
-  }
+}
+header button i{
+    width: 100%;
+    height: 4px;
+    margin: 10px 0;
+    /* display: block; */
 }
 /* main */
 .main{
     width: 80%;
     float: right;
 }
+/* home */
 .main .home{
     width: 100%;
     height: 100vh;
     padding: 10px 10px;
+    border: 2px solid red;
     box-sizing: border-box;
 }
 .main .home .home-container {
@@ -167,7 +159,7 @@ header .i{
 }
 .main .aboutbox img{
     width: 100%;
-    height: 250px;
+    height: 300px;
     padding: 10px 0;
 }
 .main .p2{
@@ -204,8 +196,7 @@ header .i{
     float: left;
     padding: 10px 10px;
     box-sizing: border-box;
-    box-shadow: 0px 0px 10px gray;
-
+    /* box-shadow: 0px 0px 10px gray; */
 }
 .main .subskills{
     text-align: center;
@@ -402,3 +393,44 @@ header .i{
 .footer a{
     color: white;
 }
+/* mobile screen */
+@media screen and (max-width:427px){
+    header{
+      width: 100%;
+      height: 150px;
+      float: left;
+      transition: 1s;
+    }
+    header .profilebar{
+      width: 20%;
+      margin: 10px;
+      padding: 0 5px;
+      box-sizing: border-box;
+      float: left;
+    }
+    header .profilebar img{
+        width: 100%;
+        height: 100px;
+    }
+    header .social{
+      width: 80%;
+      margin-top: 40px;
+      text-align: center;
+    }
+    header .social .iconbar{
+        width: 100%;
+        padding: 10px 10px;
+    }
+  }
+@media screen and (max-width: 427px){
+      .main {
+          width: 100%;
+    }
+  }
+  @media screen and (max-width: 427px){
+    .main .myskills {
+        width: 100%;
+    }
+}
+
+
