--- a/css/index.css
+++ b/css/index.css
@@ -117,12 +117,7 @@ header .i{
     background-size: cover;
     margin: 0;
 }
-.main .home .home-container {
-    width: 100%;
-    z-index: 2;
-    margin: auto;
-}
-.main .home-container h1{
+.main .home h1{
     color: #fff;
     font-size: 5em;
     text-transform: capitalize;
@@ -145,7 +140,7 @@ header .i{
     /* margin: 10px 0; */
 }
 .main .about .p1{
-    font-size: 13px;
+    font-size: 14px;
     padding:10px 0;
 }
 .main .row{
@@ -171,11 +166,11 @@ header .i{
     margin: 10px 0;
     padding: 10px 10px;
 }
-.main .p3{
+/* .main .p3{
     font-size:12px;
     margin: 10px 0;
     padding: 10px 10px;
-}
+} */
 /* my skills */
 .main .skills{
     width: 100%;
@@ -363,7 +358,7 @@ header .i{
 }
 .main .contactbox{
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     border: 2px solid darkgray;
     box-shadow: 0px 0px 10px gray;
 }
@@ -375,22 +370,29 @@ header .i{
     margin-top: 5px;
 }
 .main .contactbox .input{
-    width: 50%;
-    height: 20px;
+    width: 100%;
+    height: 30px;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
+    box-sizing: border-box;
+    margin: 20px 0px;
+    padding: 0px 20px;
+}
+.input .txtbox {
+    width:60%;
+    height: 30px;
+    border: 1px solid lightgrey;
 }
 .main .contactbox .msgbox {
-    width: 95%;
-    height: 50px;
+    width: 89%;
+    height: 30px;
     outline: none;
     border: 1px solid lightgrey;
     margin-top: 12px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 .main .contactbox .msgbox1{
-    width: 95%;
+    width: 89%;
     height: 150px;
     outline: none;
     border: 1px solid lightgrey;
@@ -398,12 +400,12 @@ header .i{
 }
 .main .contactbox .btn{
     width: 100px;
-    height: 50px;
+    height: 35px;
     background-color: #4a89dc;
     border-radius: 5px;
     outline: none;
     margin-left: 10px;
-    margin-top: 10px;
+    margin-top: 30px;
     text-transform: capitalize;
     font-size: 10px;
 }
@@ -434,14 +436,13 @@ header .i{
 @media screen and (max-width:427px){
     header{
       width: 100%;
-      height: 150px;
+      height: 180px;
       float: left;
       transition: 1s;
     }
     header .profilebar{
       width: 20%;
-      margin: 10px;
-      padding: 0 5px;
+      margin: 15px;
       box-sizing: border-box;
       float: left;
     }
@@ -451,8 +452,8 @@ header .i{
     }
     header .social{
       width: 80%;
-      margin-top: 40px;
-      text-align: center;
+      margin: 50px 0;
+      text-align: right;
     }
     header .social .iconbar{
         width: 100%;
@@ -465,9 +466,10 @@ header .i{
 @media screen and (max-width: 427px){
     .main {
         width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
-}
-@media screen and (max-width:427px) {
     .main .myskills {
         width: 100%;
     }
